# newsroom-yt-pipeline

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.docs-view/artifacts/: ARTIFACTS.md
.docs-view/docs/: AGENT_BRIEF.md  DEVELOPMENT_PRACTICES.md  HANDOFF.md  META_REVIEW_LEDGER.md  NLMYTGEN_BOUNDARY.md  PROJECT_SPEC.md  RUNTIME_STATE.md  YMM4_IMPORT_PROOF.md
.docs-view/prompts/: notebook_packet_prompt.md  script_anchor_prompt.md  script_yukkuri_prompt.md
artifacts/: ARTIFACTS.md
configs/: autonomy.yml  layouts.yml  quote_policy.yml  series.yml  source_pools.yml  sources.yml  speakers.yml
docs/: AGENT_BRIEF.md  DEVELOPMENT_PRACTICES.md  HANDOFF.md  META_REVIEW_LEDGER.md  NLMYTGEN_BOUNDARY.md  PROJECT_SPEC.md  RUNTIME_STATE.md  YMM4_IMPORT_PROOF.md  index.md
docs/approved_materializations/: README.md  script_d2a46430e084.materialization.yml
docs/channel_memory/: README.md  copilot_watch.yml
prompts/: notebook_packet_prompt.md  script_anchor_prompt.md  script_yukkuri_prompt.md
src/newsroom/: __init__.py  (+1 more)
tests/: test_asset_registry.py  test_channel_memory.py  test_cli_report.py  test_cluster_window.py  test_clustering.py  test_config.py  test_critical_sources.py  test_db.py  test_export_inspector.py  test_inoreader_client.py  test_newsroom_export_fixture.py  test_packet_builder.py  test_quote_manifest.py  test_rss_client.py  test_scoring.py  test_script_materialization.py  test_script_workbench.py  test_source_cli.py  test_source_import.py  test_storage_round_trip.py  test_visual_planner.py  test_ymm4_export.py
tools/: generate-doc-nav.ps1
(+50 files in other folders)
