[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newsroom-yt-pipeline"
version = "0.1.0"
description = "Article ledger MVP for a network-news YouTube editorial pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "mkdocs-material>=9.5",
  "pytest>=8.0",
]

[project.scripts]
newsroom = "newsroom.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
